mise a jour du code

--- a/src/example_application.ipynb
+++ b/src/example_application.ipynb
@@ -81,6 +81,38 @@
     "integrale = sp.integrate(f, x)\n",
     "print(\"∫f(x)dx =\", integrale)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " On a la fonction : x**3 - 6*x**2 + 11*x - 6\n",
+      "Dérivée : 3*x**2 - 12*x + 11\n",
+      "Points critiques : [2 - sqrt(3)/3, sqrt(3)/3 + 2]\n",
+      "Racines : [1, 2, 3]\n",
+      "Intégrale : x**4/4 - 2*x**3 + 11*x**2/2 - 6*x\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"On a la fonction :\", f) \n",
+    "print(\"Dérivée :\", f_prime) \n",
+    "print(\"Points critiques :\", crit_points)\n",
+    "print(\"Racines :\", roots) \n",
+    "print(\"Intégrale :\", integrale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
