--- a/src/entropie-croisée-catégorielle.ipynb
+++ b/src/entropie-croisée-catégorielle.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -29,14 +29,12 @@
        "[       0, y2/p2**2]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sympy as sp\n",
-    "\n",
     "# Variables symboliques\n",
     "p1, p2, y1, y2 = sp.symbols('p1 p2 y1 y2')\n",
     "\n",
@@ -139,7 +137,7 @@
     }
    ],
    "source": [
-    "# Variables symboliques pour 2 classes (simplifié)\n",
+    "# Variables symboliques pour 2 classes \n",
     "p1, p2, y1, y2 = sp.symbols('p1 p2 y1 y2')\n",
     "L = - (y1*sp.log(p1) + y2*sp.log(p2))\n",
     "\n",
